# proteindj

./: .gitignore  LICENSE  README.md  main.nf  nextflow.config  nextflow_schema.json  sweep.yaml  tower.yml
apptainer/: af2.def  bindcraft.def  boltz2.def  build_containers.sh  dl_binder_design.def  fampnn.def  pyrosetta_tools.def  python_tools.def  rfdiffusion.def  upload_containers.sh
benchmarkdata/: 1www_trka_adj.pt  1www_trka_ss.pt  3di3_il7ra_adj.pt  3di3_il7ra_ss.pt  4zxb_ir_adj.pt  4zxb_ir_ss.pt  5o45_pd-l1_adj.pt  5o45_pd-l1_ss.pt  5vli_ha_adj.pt  5vli_ha_ss.pt
bindsweeper/: DEVELOPERS.md  Makefile  gpu_scaling_test.yaml  pyproject.toml  pytest.ini  quick_tests.sh  test_paired_params.py
bindsweeper/bindsweeper/: __main__.py  binder_schema.json  binder_validator.py  cli.py  default_results_config.yaml  main.py  parameter_converters.py  profile_generator.py  results_processor.py  success_rate_analyzer.py  sweep_config.py  sweep_engine.py  sweep_types.py  utils.py
bindsweeper/test_configs/: test_filtering.yaml  test_hotspots_sweep.yaml  test_multi_sweep.yaml  test_noise_sweep.yaml  test_paired.yaml  test_scaffold_sweep.yaml  test_targets_sweep.yaml
bindsweeper/tests/: __init__.py  conftest.py  test_binder_validator.py  test_success_rate_analyzer.py  test_sweep_config.py  test_sweep_engine.py  test_sweep_types.py  test_sweep_types_fixed.py
docs/: bindsweeper.md  installation.md  metrics.md  modes.md  parameters.md  scaffolds.md  testing.md
lib/: RFDiffusionParams.groovy  Utils.groovy  pdl1_msa.a3m
modules/: af2.nf  analysis.nf  bindcraft.nf  boltz.nf  combine_metadata.nf  compress.nf  fampnn.nf  merge_uncropped_target.nf  proteinmpnn.nf  publish.nf  rfdiffusion.nf
schemas/: mode_parameters.csv  nextflow_schema_bindcraft.json  nextflow_schema_bindcraft_denovo.json  nextflow_schema_custom.json  (+8 more)
(+843 files in other folders)
